--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mein Imbiss</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="imbiss-website/src/styles/main.css">
 </head>
 <body>
     <header>
-        <img src="assets/doner-kebab-logo-restaurants-markets-600nw-2506818859.webp" alt="Logo" style="height: 48px; margin: 8px 0 0 16px; border-radius: 8px; position: absolute; left: 0; top: 0;" />
+    <img src="imbiss-website/src/assets/doner-kebab-logo-restaurants-markets-600nw-2506818859.webp" alt="Logo" style="height: 48px; margin: 8px 0 0 16px; border-radius: 8px; position: absolute; left: 0; top: 0;" />
         <h1 style="text-align: center; margin: 0;">Willkommen bei Mein Imbiss</h1>
         <nav>
             <ul id="category-list">
@@ -34,10 +34,10 @@
     </main>
     <footer>
         <p>&copy; 2025 Mein Imbiss. Alle Rechte vorbehalten. |
-            <a href="../impressum.html">Impressum</a> |
-            <a href="../datenschutz.html">Datenschutz</a>
+            <a href="imbiss-website/impressum.html">Impressum</a> |
+            <a href="imbiss-website/datenschutz.html">Datenschutz</a>
         </p>
     </footer>
-    <script src="scripts/app.js"></script>
+    <script src="imbiss-website/src/scripts/app.js"></script>
 </body>
 </html>
