--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Mein Imbiss. Alle Rechte vorbehalten. |
-            <a href="imbiss-website/impressum.html">Impressum</a> |
-            <a href="imbiss-website/datenschutz.html">Datenschutz</a>
-        </p>
+        <div class="footer-content">
+            <div class="footer-copyright">
+                <p>&copy; 2025 Mein Imbiss. Alle Rechte vorbehalten.</p>
+            </div>
+            <nav class="footer-nav">
+                <a href="imbiss-website/impressum.html">Impressum</a>
+                <a href="imbiss-website/datenschutz.html">Datenschutz</a>
+            </nav>
+        </div>
     </footer>
     <script src="imbiss-website/src/scripts/app.js"></script>
 </body>
