--- a/index.html
+++ b/index.html
@@ -19,16 +19,48 @@
     <main>
         <section id="dish-section">
             <h2>Unsere Gerichte</h2>
+            <p class="price-notice">* Alle angezeigten Preise sind Vor-Ort-Preise. Bei Lieferung können die Preise abweichen.</p>
             <div id="dishes">
                 <!-- Gerichte werden hier angezeigt -->
             </div>
         </section>
+        <section id="order">
+            <h2>Online Bestellen</h2>
+            <div class="contact-links delivery-links">
+                <a href="https://www.lieferando.de/" target="_blank" rel="noopener">
+                    <span class="service-name">Lieferando</span>
+                    <span class="delivery-time">30-45 Min</span>
+                </a>
+                <a href="https://wolt.com/de/deu/berlin" target="_blank" rel="noopener">
+                    <span class="service-name">Wolt</span>
+                    <span class="delivery-time">25-40 Min</span>
+                </a>
+                <a href="https://www.ubereats.com" target="_blank" rel="noopener">
+                    <span class="service-name">Uber Eats</span>
+                    <span class="delivery-time">35-50 Min</span>
+                </a>
+            </div>
+        </section>
+        
         <section id="contact">
             <h2>Kontakt</h2>
-            <div class="contact-links">
-                <a href="https://www.lieferando.de/" target="_blank" rel="noopener">Lieferando (Dummy)</a> |
-                <a href="https://wolt.com/de/deu/berlin" target="_blank" rel="noopener">Wolt (Dummy)</a> |
-                <a href="https://www.ubereats.com" target="_blank" rel="noopener">Uber Eats (Dummy)</a>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <strong>Telefon:</strong>
+                    <a href="tel:+49123456789">+49 123 456789</a>
+                </div>
+                <div class="contact-item">
+                    <strong>E-Mail:</strong>
+                    <a href="mailto:info@samet-imbiss.de">info@samet-imbiss.de</a>
+                </div>
+                <div class="contact-item">
+                    <strong>Adresse:</strong>
+                    <address>Musterstraße 123<br>12345 Berlin</address>
+                </div>
+                <div class="contact-item">
+                    <strong>Öffnungszeiten:</strong>
+                    <p>Mo-Sa: 11:00 - 22:00 Uhr<br>So: 12:00 - 21:00 Uhr</p>
+                </div>
             </div>
         </section>
     </main>
